second attempt to fix issue with scrolling on mobile in website mode

--- a/src/app/modules/website/website.page.css
+++ b/src/app/modules/website/website.page.css
@@ -97,15 +97,21 @@
   display: flex;
   flex-direction: column;
   min-height: calc(100vh - 56px);
+  -webkit-overflow-scrolling: touch !important;
 }
 
 .wrapper-no-heading {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  -webkit-overflow-scrolling: touch !important;
 }
 
 .wrapper-heading iframe, .wrapper-no-heading iframe {
   border: none;
   flex-grow: 1;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  box-sizing: border-box;
 }
